Squashed commit of the following:
commit 7f26aa667b91f09f0e647cf8c11269e5c8ea225c
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Wed May 24 11:33:01 2023 +0200

    test: repair tests

commit 133c9b85f4d09bead73c0838f192d0438a1d12d2
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Wed May 24 11:32:12 2023 +0200

    feat: adding HTTP/2.0 protocol support to server configuration

commit 92778b01c3ef7badc68fe15b0049ee9317e8591e
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Tue May 23 09:10:51 2023 +0200

    feat: adding HTTP/2.0 protocol support to server

commit 3b664e31dfd12a14c3d9055129edf02b33286e80
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Tue May 23 09:08:18 2023 +0200

    test: ignore JUnit Jupiter transitive dep

    see #440